Updated java_tests/pom.xml to be supported by JDK17.